--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   provider: ^4.3.3
   sqflite: ^1.3.2+3
   flutter_screenutil: ^4.0.3+1
+  cached_network_image: ^2.5.0
 
 dev_dependencies:
   flutter_test:
