--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   sqflite: ^1.3.2+3
   flutter_screenutil: ^4.0.3+1
   cached_network_image: ^2.5.0
+  common_utils: ^1.2.4
 
 dev_dependencies:
   flutter_test:
