--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_screenutil: ^4.0.3+1
   cached_network_image: ^2.5.0
   common_utils: ^1.2.4
+  device_info: ^1.0.0
 
 dev_dependencies:
   flutter_test:
