--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cached_network_image: ^2.5.0
   common_utils: ^1.2.4
   device_info: ^1.0.0
+  flutter_keyboard_visibility: ^4.0.6
 
 dev_dependencies:
   flutter_test:
