--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   common_utils: ^1.2.4
   device_info: ^1.0.0
   flutter_keyboard_visibility: ^4.0.6
+  shared_preferences: ^0.5.12
+  redux: ^4.0.0
 
 dev_dependencies:
   flutter_test:
