--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_keyboard_visibility: ^4.0.6
   shared_preferences: ^0.5.12
   redux: ^4.0.0
+  multi_image_picker: ^4.7.14
 
 dev_dependencies:
   flutter_test:
