--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   shared_preferences: ^0.5.12
   redux: ^4.0.0
   multi_image_picker: ^4.7.14
+  flutter_downloader: ^1.5.2
+  permission_handler: ^5.1.0
 
 dev_dependencies:
   flutter_test:
