--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,27 +10,27 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  dio: ^3.0.10
-  flutter_swiper: ^1.1.6
+  dio: 
+  flutter_swiper: 
   flutter:
     sdk: flutter
-  flutter_redux: ^0.7.0
+  flutter_redux: ^0.8.2
   cupertino_icons: ^1.0.0
-  connectivity: ^2.0.2
-  intl: ^0.16.1
-  audioplayers: ^0.17.4
-  provider: ^4.3.3
-  sqflite: ^1.3.2+3
-  flutter_screenutil: ^4.0.3+1
-  cached_network_image: ^2.5.0
-  common_utils: ^1.2.4
-  device_info: ^1.0.0
-  flutter_keyboard_visibility: ^4.0.6
-  shared_preferences: ^0.5.12
-  redux: ^4.0.0
+  connectivity: ^3.0.3
+  intl: ^0.17.0
+  audioplayers: ^0.18.3
+  provider: ^5.0.0
+  sqflite: ^2.0.0+3
+  flutter_screenutil: ^5.0.0
+  cached_network_image: ^3.0.0
+  common_utils: ^2.0.2
+  device_info: ^2.0.0
+  flutter_keyboard_visibility: ^5.0.1
+  shared_preferences: ^2.0.5
+  redux: ^5.0.0
   multi_image_picker: ^4.7.14
   flutter_downloader: ^1.5.2
-  permission_handler: ^5.1.0
+  permission_handler: ^7.1.0
 
 dev_dependencies:
   flutter_test:
