--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   multi_image_picker: ^4.7.14
   flutter_downloader: ^1.5.2
   permission_handler: ^7.1.0
+  flutter_slidable: ^0.6.0
 
 dev_dependencies:
   flutter_test:
